--- a/styles/architect.css
+++ b/styles/architect.css
@@ -5,6 +5,7 @@
     font-family: 'Work Sans', sans-serif;
 }
 
+/* Shared Styles */
 .btn-primary {
     border-radius: 8px;
     background: #FF900E;
@@ -14,6 +15,10 @@
     font-weight: 600;
     cursor: pointer;
     border: 0;
+}
+
+.text-light-gray {
+    color: #727272;
 }
 
 /* Header styles */
@@ -63,42 +68,45 @@ nav li a {
     color: #131313;
 }
 
-.banner-description {
-    color: #727272;
-}
-.banner img{
+
+.banner img {
     margin-top: 20px;
     width: 100%;
 }
 
 /* Main section Styles */
 
-main{
+main {
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 70px auto;
 }
 
-.teams-container{
+.teams-container {
     display: flex;
     align-items: center;
 }
-.teams-img-container{
+
+.teams-img-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1.5rem;
 }
-.teams-content{
+
+.teams-content {
     padding-left: 70px;
     padding-right: 70px;
 }
-.teams-title{
+
+.teams-title {
     font-size: 2.8rem;
 }
-.teams-title .quick-list{
-    color: #727272;
+
+.teams-title .quick-list {
+
     font-weight: 500;
 }
-.teams-title .teams-features{
+
+.teams-title .teams-features {
     color: #FF900E;
     font-weight: 700;
 }
@@ -114,21 +122,34 @@ main{
 /* Media queries */
 @media screen and (max-width:576px) {
 
-    header{
+    header {
         padding: 20px;
     }
-    nav{
+
+    nav,
+    .teams-container {
         flex-direction: column;
     }
+
+    .teams-img-container {
+        grid-template-columns: 1fr;
+    }
+    .teams-content{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
+
 /* Tablet or Medium device */
 @media screen and (min-width:576px) and (max-width:960px) {
 
-    header{
+    header {
         padding: 50px;
     }
-    nav{
+
+    nav,
+    .teams-container {
         flex-direction: column;
     }
-    
+
 }
