--- a/styles/architect.css
+++ b/styles/architect.css
@@ -16,6 +16,11 @@
     cursor: pointer;
     border: 0;
 }
+.section-title {
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #131313;
+}
 
 .text-light-gray {
     color: #727272;
@@ -33,11 +38,7 @@ nav {
     align-items: center;
 }
 
-.nav-title {
-    font-size: 2.8rem;
-    font-weight: 700;
-    color: #131313;
-}
+
 
 nav>ul {
     display: flex;
