--- a/styles/architect.css
+++ b/styles/architect.css
@@ -16,6 +16,7 @@
     cursor: pointer;
     border: 0;
 }
+
 .section-title {
     font-size: 2.8rem;
     font-weight: 700;
@@ -113,6 +114,33 @@ main {
 }
 
 
+/* Facts Section */
+
+.facts-card-container{
+    display: flex;
+    justify-content: space-around;
+}
+
+.facts-card-container .card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px;
+}
+.facts-card-container .card-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 5px;
+}
+
+.facts-card-container .card-stats{
+    font-size: 2.8rem;
+    color: #424242;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 
 
 
@@ -135,7 +163,8 @@ main {
     .teams-img-container {
         grid-template-columns: 1fr;
     }
-    .teams-content{
+
+    .teams-content {
         padding-left: 20px;
         padding-right: 20px;
     }
