--- a/styles/architect.css
+++ b/styles/architect.css
@@ -4,7 +4,8 @@
 * {
     font-family: 'Work Sans', sans-serif;
 }
-body{
+
+body {
     margin: 0;
 }
 
@@ -82,13 +83,14 @@ nav li a {
 /* Main section Styles */
 
 main {
-    max-width: 1440px;
+    max-width: 1340px;
     margin: 70px auto;
 }
 
 .teams-container {
     display: flex;
     align-items: center;
+
 }
 
 .teams-img-container {
@@ -120,7 +122,8 @@ main {
 .features {
     margin-top: 130px;
     display: flex;
-    gap: 100px;
+    gap: 50px;
+
 }
 
 .features .section-title {
@@ -135,7 +138,9 @@ main {
     background: #FFF;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
 }
-.feature-img img{
+
+.feature-img img {
+    width: auto;
     height: 90%;
     margin-left: 50px;
 }
@@ -152,11 +157,12 @@ main {
 
 }
 
-.ten-years-badge h2{
+.ten-years-badge h2 {
     font-size: 4rem;
     margin: 0;
 }
-.ten-years-badge p{
+
+.ten-years-badge p {
     font-size: 1.5rem;
 }
 
@@ -208,6 +214,21 @@ main {
 }
 
 
+/* Footer */
+
+.footer {
+    border-radius: 8px;
+    background: #FFF4E7;
+    width: 1340px;
+    margin: 90px auto;
+}
+.footer p{
+    color: #424242;
+    font-size: 20px;
+    text-align: center;
+    padding: 30px;
+}
+
 
 
 
@@ -232,11 +253,13 @@ main {
     .teams-img-container {
         grid-template-columns: 1fr;
     }
-    .feature-img img{
+
+    .feature-img img {
         width: 100%;
         margin-left: 0;
     }
-    .ten-years-badge{
+
+    .ten-years-badge {
         position: static;
         max-width: 300px;
     }
@@ -249,6 +272,9 @@ main {
 
     .facts-card-container {
         gap: 20px;
+    }
+    .footer{
+        width: auto;
     }
 }
 
@@ -264,6 +290,9 @@ main {
     .features,
     .sponsors-img-container {
         flex-direction: column;
+    }
+    .footer{
+        width: auto;
     }
 
 }
